--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "spotifyelectron",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "productName": "Products Electron App",
-  "main": "src/electron.js",
+  "main": "public/electron.js",
+  "author": "Juan Lopez",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "electron": "^16.0.6",
     "electron-is-dev": "^2.0.0",
     "electron-packager": "^15.4.0",
     "electron-reload": "^2.0.0-alpha.1",
@@ -31,8 +32,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron Tutorial App\"",
-    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+    "package-win": "electron-packager . electron-tutorial-app --overwrite --asar --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron Tutorial App\"",
+    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "yarn build"    
   },
   "eslintConfig": {
     "extends": [
@@ -54,8 +57,19 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
+    "electron": "^16.0.6",
     "electron-builder": "^22.14.5",
     "electron-devtools-installer": "^3.2.0",
     "wait-on": "^6.0.0"
+  },
+  "build": {
+    "appId": "com.juanlopez.appmusic",
+    "files": [
+        "build/**/*",
+        "node_modules/**/*"
+    ],
+    "directories": {
+        "buildResources": "assets"
+    }
   }
 }
